--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name" : "易思客商",
-    "appid" : "__UNI__EF09ED0",
+    "name" : "新疆国泰客商",
+    "appid" : "__UNI__7AD80FE",
     "description" : "",
-    "versionName" : "3.3.24041202",
+    "versionName" : "1.0.1",
     "versionCode" : "100",
     "transformPx" : false,
     /* 5+App特有相关 */
